make images gray in processing step

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -40,6 +40,7 @@
     ") -> np.ndarray:\n",
     "    img = _resize_image(img, downscale_factor)\n",
     "    img = _fix_exif_rotation(img)\n",
+    "    img = _make_image_gray(img)\n",
     "    return img\n",
     "\n",
     "\n",
@@ -50,7 +51,10 @@
     "\n",
     "\n",
     "def _fix_exif_rotation(img: np.ndarray) -> np.ndarray:\n",
-    "    return cv2.rotate(img, cv2.ROTATE_90_CLOCKWISE)"
+    "    return cv2.rotate(img, cv2.ROTATE_90_CLOCKWISE)\n",
+    "\n",
+    "def _make_image_gray(img: np.ndarray) -> np.ndarray:\n",
+    "    return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)"
    ]
   },
   {
@@ -65,9 +69,10 @@
     "    *,\n",
     "    downscale_factor: float | int,\n",
     ") -> None:\n",
+    "    assert len(processed_img.shape) == 2 # Grayscale\n",
+    "    # Check if image was rotated and resized\n",
     "    assert processed_img.shape[1] == int(img.shape[0] / downscale_factor)\n",
-    "    assert processed_img.shape[0] == int(img.shape[1] / downscale_factor)\n",
-    "    assert processed_img.shape[2] == img.shape[2]"
+    "    assert processed_img.shape[0] == int(img.shape[1] / downscale_factor)"
    ]
   },
   {
@@ -81,7 +86,7 @@
     "    filename: Path,\n",
     ") -> None:\n",
     "    filename.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    plt.imsave(filename, img)"
+    "    plt.imsave(filename, img, cmap=\"gray\")"
    ]
   },
   {
@@ -90,8 +95,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from concurrent.futures import ProcessPoolExecutor\n",
-    "\n",
     "def process_images(\n",
     "    source_folder: Path,\n",
     "    target_folder: Path,\n",
@@ -103,6 +106,9 @@
     "            img = plt.imread(file)\n",
     "            processed_img = process_image(\n",
     "                img, downscale_factor=downscale_factor\n",
+    "            )\n",
+    "            validate_processing(\n",
+    "                img, processed_img, downscale_factor=downscale_factor\n",
     "            )\n",
     "            target_file = target_folder / folder.name / file.name\n",
     "            save_image(processed_img, target_file)"
@@ -145,7 +151,7 @@
     "processed_sample_img = process_image(\n",
     "    sample_img, downscale_factor=DOWNSCALE_FACTOR\n",
     ")\n",
-    "plt.imshow(processed_sample_img)\n",
+    "plt.imshow(processed_sample_img, cmap=\"gray\")\n",
     "print(\"Shape: \", processed_sample_img.shape)"
    ]
   },
