--- a/data_summary.ipynb
+++ b/data_summary.ipynb
@@ -145,8 +145,8 @@
     "    sample = df.sample(n_images)\n",
     "    for i in range(n_images):\n",
     "        file_path = sample[\"file_path\"].values[i]\n",
-    "        img = plt.imread(file_path)\n",
-    "        plt.imshow(img)\n",
+    "        img = plt.imread(file_path, format=\"jpg\")\n",
+    "        plt.imshow(img, cmap=\"gray\")\n",
     "        plt.xticks([])\n",
     "        plt.yticks([])\n",
     "        plt.show()\n",
@@ -164,24 +164,24 @@
     "    \"\"\"Plots a subplot of images with images_per_class images per class in each\n",
     "    row.\n",
     "    \"\"\"\n",
-    "    _, axs = plt.subplots(10, images_per_class, figsize=(20, 20), dpi=50)\n",
+    "    _, axs = plt.subplots(10, images_per_class, figsize=(20, 20), dpi=200)\n",
     "    for i in range(10):\n",
     "        class_df = df[df[\"label_numeric\"] == i]\n",
     "        sample = class_df.sample(images_per_class)\n",
     "        for j in range(images_per_class):\n",
     "            file_path = sample[\"file_path\"].values[j]\n",
     "            img = plt.imread(file_path)\n",
-    "            axs[i, j].imshow(img)\n",
+    "            axs[i, j].imshow(img, cmap=\"gray\")\n",
     "            axs[i, j].set_xticks([])\n",
     "            axs[i, j].set_yticks([])\n",
     "            if j == 0:\n",
     "                axs[i, j].set_ylabel(CLASS_TO_OBJECT_NAME[i], fontsize=14)\n",
     "    plt.subplots_adjust(wspace=0, hspace=0)\n",
-    "    # plt.tight_layout()\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_database_sample(df, images_per_class=5)"
+    "plot_database_sample(df)"
    ]
   },
   {
@@ -189,7 +189,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"images_metadata.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
